# agendador-de-servicos

./: README.md  app.py  hello.py  pyproject.toml  requirements.txt  streamlit_app.py  vercel.json
static/css/: styles.css
static/js/: admin.js  scripts.js
templates/: admin.html  index.html
